user.css
/* ... */
.main-collectionLinkButton-collectionLinkButton[href="/collection/tracks"] .main-collectionLinkButton-icon {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_heart_24_filled.svg');
  background-color: white !important;
  margin-right: 0px;
}

.main-collectionLinkButton-collectionLinkButton[href="/collection/episodes"] .main-collectionLinkButton-icon {
  -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_mic_on_24_filled.svg');
  background-color: #00DA6B !important;
  margin-right: 0px;
}

.main-likedSongsButton-likedSongsIcon,
.main-yourEpisodesButton-yourEpisodesIcon,
.main-collectionLinkButton-collectionLinkText {
  display: none !important;
}


.main-type-balladBold {
  font-weight: 500;
  letter-spacing: 0.2px;
}

.main-type-minuetBold {
  text-transform: none;
  letter-spacing: 0px;
  font-weight: 400;
  font-size: 14px;
  line-height: 0px;
}

.main-shelf-seeAll {
  height: 21px;
}

style {
  --nav-bar-width: 62px !important;
}

.main-playButton-PlayButton.main-playButton-primary,
.main-pageErrorTemplate-errorButton {
  color: var(--spice-shadow);
}

button.switch {
  background-color: transparent !important;
}

#spicetify-home-config button,
#spicetify-sidebar-config button {
  background-color: var(--spice-main) !important;
  color: var(--spice-text) !important;
  border: none !important;
}

#spicetify-home-config button {
  border-radius: var(--border-radius-2) !important;
}

#spicetify-sidebar-config button {
  border-radius: var(--border-radius-3) !important;
}

#spicetify-home-config button:disabled,
#spicetify-sidebar-config button:disabled {
  background-color: var(--spice-button-disabled) !important;
  color: var(--spice-text) !important;
}

.main-buttons-button,
.show-followButton-button {
  background-color: var(--spice-card);
  font-weight: normal;
  font-size: 15px;
  letter-spacing: 0px;
  text-transform: none;
  border-radius: var(--border-radius-2);
  -webkit-font-smoothing: subpixel-antialiased;
}

.main-button-outlined,
.main-button-outlined:hover {
  border: var(--spice-contour) solid 1px !important;
}

.main-button-primary {
  background-color: var(--spice-accent);
  color: black;
}

.main-button-outlined {
  background-color: var(--spice-card);
}

.main-button-secondary {
  color: var(--spice-text);
}

.main-entityHeader-titleButton {
  background: none !important;
}

.x-carousel-button,
.x-removeButton-RemoveButton {
  background-color: var(--spice-card);
}

.x-carousel-button svg {
  fill: var(--spice-text) !important;
}

/* sidebar */

.Root__nav-bar {
  z-index: 1 !important;
  max-width: 85px !important;
  height: calc(100% + 107px);
  padding-bottom: 127px;
}

.main-navBar-navBar {
  width: 85px !important;
}

.main-navBar-navBarLink {
  border-radius: var(--border-radius-2);
  color: var(--spice-text);
  height: 65px !important;
  display: block;
  padding-top: 12px;
  padding-left: 0px;
  padding-right: 0px;
  margin-bottom: 4px;
  margin-top: 4px;
}

.main-navBar-navBarLink span,
.main-createPlaylistButton-text {
  font-size: 10.5px !important;
  margin: auto;
  display: block;
  text-align: center;
  margin-top: 4px;
  white-space: pre;
  color: var(--spice-subtext);
}

.main-navBar-navBarLinkActive span {
  display: none;
}

.main-navBar-navBarLinkActive > .icon,
.main-navBar-navBarLinkActive .gSLhUO,
.main-navBar-navBarLinkActive > .hDgDGI {
  position: relative;
  top: 50%;
  transform: translate(0, -50%);
  margin: auto;
}

.main-navBar-navBarLinkActive {
  padding: 0px;
}

.main-navBar-entryPoints {
  padding-top: 36px !important;
}

.main-type-mestoBold {
  font-weight: normal !important;
}

.navBar-navBarLink-accent {
  position: relative;
  width: 4px;
  height: 25px;
  background-color: var(--spice-accent);
  border-radius: var(--border-radius-2);
  bottom: 3px;
  display: none;
}

.main-navBar-navBarLinkActive>.navBar-navBarLink-accent {
  display: block !important;
}

.main-navBar-navBarLink:hover {
  background-color: rgba(var(--spice-rgb-selected-row), 0.3);
}

.main-navBar-navBarLink:active {
  background-color: rgba(var(--spice-rgb-selected-row), 0.5);
}

.main-navBar-navBarLinkActive,
.main-navBar-navBarLinkActive:hover,
.main-navBar-navBarLinkActive:active,
.main-navBar-navBarLinkActive:focus {
  background-color: var(--spice-selected-row);
  color: var(--spice-not-selected);
  transition: 167ms ease-out all;
}

.main-navBar-navBarLink {
  transition: background-color ease-out 167ms;
}


/* playlist sidebar */

.main-rootlist-rootlist .os-content {
  padding: 0px 0px !important;
}

.main-rootlist-rootlist {
  --left-sidebar-item-height: 48px;
  --left-sidebar-padding-left: 18px;
  --left-sidebar-padding-right: 18px;
}

.main-rootlist-rootlistItemLink {
  padding: 8px;
}

.main-rootlist-rootlistItemLink:link,
.main-rootlist-rootlistItemLink:visited,
.main-rootlist-rootlistPlaylistHeader {
  color: var(--spice-text);
  background-color: var(--spice-card);
  background-size: cover;
  border-radius: var(--border-radius-2);
  margin-bottom: 14px;
}

.main-rootlist-textWrapper {
  display: none;
}


.main-rootlist-statusIcons {
  right: 17px !important;
  top: -4px;
}

.main-rootlist-rootlistItemLinkActive~.main-rootlist-expandArrow:focus,
.main-rootlist-rootlistItemLinkActive~.main-rootlist-expandArrow:hover,
.main-rootlist-rootlistItemLinkActive~.main-rootlist-expandArrow {
  color: var(--spice-text);
}

.main-rootlist-expandArrow {
  color: var(--spice-text);
  position: relative;
  margin-inline-start: -32px;
  padding: 8px;
  right: -17px;
  top: -1px;
}

.main-rootlist-expandArrowRotated {
  right: -5px !important;
  top: 14px !important;
}

.main-rootlist-statusIcons {
  margin-inline-start: -24px;
  position: relative;
  right: 8px;
}

.main-rootlist-rootlistItemLink:hover,
.main-createPlaylistButton-button:hover,
.main-collectionLinkButton-collectionLinkButton:hover {
  filter: brightness(50%);
}

.main-rootlist-statusIcons>button {
  color: var(--spice-text);
}
/* ... */

